kconfig: platform_dir: add support for legacy platform
For legacy platform driver, we keep old scheme and add
MTK_PLATFORM definition.

MTK-Commit-Id: 53b2ac00ef02d680c997000c7afcc3e83b3490b8

Change-Id: I0af5f8f38af6cec44414fa29f6bc736e2d5e7bef
Signed-off-by: Juju Sung <juju.sung@mediatek.com>
CR-Id: ALPS04844246
Feature: [Module]Kernel Maintenance

--- a/drivers/misc/mediatek/Kconfig
+++ b/drivers/misc/mediatek/Kconfig
@@ -1,5 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0
 
+config MTK_PLATFORM
+	string "MTK platform name"
+
 menu "Storage"
 source "drivers/misc/mediatek/pidmap/Kconfig"
 endmenu # Storage
