defconfig: Define GPU version

--- a/arch/arm64/configs/vitamin-gki_defconfig
+++ b/arch/arm64/configs/vitamin-gki_defconfig
@@ -948,6 +948,7 @@ CONFIG_MTK_AAL_SUPPORT=y
 CONFIG_MTK_ROUND_CORNER_SUPPORT=y
 CONFIG_MTK_MML=m
 CONFIG_MTK_GPU_SUPPORT=m
+CONFIG_MTK_GPU_VERSION="mali valhall r32p1 mt6983"
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
 CONFIG_MTK_GPU_SWPM_SUPPORT=y
 CONFIG_MTK_GPUFREQ_V2=y
