--- a/arch/arm64/configs/vitamin-gki_defconfig
+++ b/arch/arm64/configs/vitamin-gki_defconfig
@@ -71,6 +71,9 @@ CONFIG_RANDOMIZE_BASE=y
 CONFIG_CMDLINE="stack_depot_disable=on kasan.stacktrace=off kvm-arm.mode=protected cgroup_disable=pressure cgroup.memory=nokmem"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_DMI is not set
+CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE=y
+CONFIG_BUILD_ARM64_DTB_IMAGE_NAMES="mediatek/mt6983"
+CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/k6983v1_64 mediatek/oplus6983_21007 mediatek/oplus6983_22021 mediatek/oplus6983_22021_EVB mediatek/oplus6983_22921 mediatek/oplus6983_22823"
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
