defconfig: Stop building unused camera drivers

--- a/arch/arm64/configs/vitamin-gki_defconfig
+++ b/arch/arm64/configs/vitamin-gki_defconfig
@@ -392,19 +392,9 @@ CONFIG_MTK_V4L2_FLASHLIGHT=m
 CONFIG_MTK_FLASHLIGHT_PT=y
 CONFIG_MTK_FLASHLIGHT_PT_STRICT=y
 CONFIG_MTK_FLASHLIGHT_DLPT=y
-CONFIG_MTK_VIDEO_LM3643=m
-CONFIG_MTK_VIDEO_LM3644=m
-CONFIG_MTK_VIDEO_SY7806=m
-CONFIG_MTK_VIDEO_KTD2687=m
-CONFIG_MTK_VIDEO_AW36515=m
-CONFIG_MTK_VIDEO_AW36518=m
-CONFIG_MTK_VIDEO_AW36515_21121=m
-CONFIG_MTK_VIDEO_AW36515_22021=m
-CONFIG_MTK_VIDEO_AW36515_22921=m
-CONFIG_MTK_VIDEO_AW36515_22017=m
 CONFIG_MTK_VIDEO_LM3642_22823=m
 CONFIG_MTK_IMGSENSOR=m
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5kjd1_mipi_raw imx519_mipi_raw imx586_mipi_raw imx576_mipi_raw imx481_mipi_raw s5k3m5sx_mipi_raw ov48b_mipi_raw imx766_mipi_raw s5k3p9sp_mipi_raw imx766dual_mipi_raw imx709_mipi_raw  imx709o_mipi_raw imx766dualo_mipi_raw s5k3m5sxo_mipi_raw imx499_mipi_raw imx766_mipi_raw_21641 s5k3p9sp_mipi_raw_21641 imx355_mipi_raw_21641 gc02m1_mipi_raw_21641 ov64b_mipi_raw_21143 s5k3p9sp_mipi_raw_21143 imx355_mipi_raw_21143 gc02m1_mipi_raw_21143 imx766_mipi_raw_21121 imx709_mipi_raw_21121 imx355_mipi_raw_21121 ov02b10_mipi_raw_21121 ov64b_mipi_raw_22801 imx890_mipi_raw_22021 imx709_mipi_raw_22021 imx355_mipi_raw_22021 imx766_mipi_raw_21861 s5k3p9sp_mipi_raw_21861 imx355_mipi_raw_21861 imx890_mipi_raw_22017 imx709_mipi_raw_22017 imx355_mipi_raw_22017 hi1336_mipi_raw_22921 hi846_mipi_raw_22921 s5k3p9sp_mipi_raw_22823 imx355_mipi_raw_22823 gc02m1_mipi_raw_22823 ov64b_mipi_raw_22823 imx890_mipi_raw_21871"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5k3p9sp_mipi_raw_22823 imx355_mipi_raw_22823 gc02m1_mipi_raw_22823 ov64b_mipi_raw_22823 imx890_mipi_raw_21871"
 CONFIG_MTK_IMGSENSOR_PLATFORM_SUPPORT=y
 CONFIG_MTK_V4L2_IMGSENSOR=m
 CONFIG_OPLUS_CAM_EVENT_REPORT=m
