defconfig: Disable unused dtb overlay
OnePlus Nord 3 only use oplus6983_22823 dtb overlay fragment

--- a/arch/arm64/configs/vitamin-gki_defconfig
+++ b/arch/arm64/configs/vitamin-gki_defconfig
@@ -69,7 +69,7 @@ CONFIG_CMDLINE_EXTEND=y
 # CONFIG_DMI is not set
 CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE=y
 CONFIG_BUILD_ARM64_DTB_IMAGE_NAMES="mediatek/mt6983"
-CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/k6983v1_64 mediatek/oplus6983_21007 mediatek/oplus6983_22021 mediatek/oplus6983_22021_EVB mediatek/oplus6983_22921 mediatek/oplus6983_22823"
+CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/oplus6983_22823"
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
