treewide: Fix malformed Kconfigs

--- a/drivers/misc/mediatek/sensors-1.0/sensorHub/Kconfig
+++ b/drivers/misc/mediatek/sensors-1.0/sensorHub/Kconfig
@@ -1,6 +1,6 @@
 
 config CUSTOM_KERNEL_SENSORHUB
-	bool "CUSTOM KERNEL SENSORHUB support"
+	tristate "CUSTOM KERNEL SENSORHUB support"
 	help
 	  Kernel space sensor hub driver.
 	  Define project used all sensor hub
@@ -12,3 +12,4 @@ config CUSTOM_KERNEL_SENSORHUB
 #source "drivers/misc/mediatek/sensors-1.0/sensorHub/SCP_shf/Kconfig"
 
 source "drivers/misc/mediatek/sensors-1.0/sensorHub/nanohub/Kconfig"
+
