--- a/drivers/media/platform/mtk-isp/camsys/isp7_1/cam/Kbuild
+++ b/drivers/media/platform/mtk-isp/camsys/isp7_1/cam/Kbuild
@@ -75,16 +75,16 @@ subdir-ccflags-y += -DCAMSYS_MRAW_V1
 mtk-cam-plat-mt6983-objs :=  mtk_cam-plat-mt6983.o
 obj-$(CONFIG_VIDEO_MTK_ISP_CAMSYS) += mtk-cam-plat-mt6983.o
 endif
-ifneq ($(wildcard $(PLATFORM_PATH)/mtk_cam-plat-mt6879.c),)
-subdir-ccflags-y += -DCAMSYS_MRAW_V2
-mtk-cam-plat-mt6879-objs :=  mtk_cam-plat-mt6879.o
-obj-$(CONFIG_VIDEO_MTK_ISP_CAMSYS) += mtk-cam-plat-mt6879.o
-endif
-ifneq ($(wildcard $(PLATFORM_PATH)/mtk_cam-plat-mt6895.c),)
-subdir-ccflags-y += -DCAMSYS_MRAW_V3
-mtk-cam-plat-mt6895-objs :=  mtk_cam-plat-mt6895.o
-obj-$(CONFIG_VIDEO_MTK_ISP_CAMSYS) += mtk-cam-plat-mt6895.o
-endif
+#ifneq ($(wildcard $(PLATFORM_PATH)/mtk_cam-plat-mt6879.c),)
+#subdir-ccflags-y += -DCAMSYS_MRAW_V2
+#mtk-cam-plat-mt6879-objs :=  mtk_cam-plat-mt6879.o
+#obj-$(CONFIG_VIDEO_MTK_ISP_CAMSYS) += mtk-cam-plat-mt6879.o
+#endif
+#ifneq ($(wildcard $(PLATFORM_PATH)/mtk_cam-plat-mt6895.c),)
+#subdir-ccflags-y += -DCAMSYS_MRAW_V3
+#mtk-cam-plat-mt6895-objs :=  mtk_cam-plat-mt6895.o
+#obj-$(CONFIG_VIDEO_MTK_ISP_CAMSYS) += mtk-cam-plat-mt6895.o
+#endif
 ifneq ($(wildcard $(PLATFORM_PATH)/mtk_cam-plat-dummy.c),)
 subdir-ccflags-y += -DCAMSYS_MRAW_DUMMY
 endif
