--- a/arch/arm64/configs/vitamin-gki_defconfig
+++ b/arch/arm64/configs/vitamin-gki_defconfig
@@ -335,6 +335,7 @@ CONFIG_UID_SYS_STATS=y
 CONFIG_OPLUS_GPIO=m
 CONFIG_HAPTIC_FEEDBACK=m
 CONFIG_SIM_DETECT=m
+CONFIG_MTK_PLATFORM="mt6983"
 CONFIG_MTK_PID_MAP=m
 CONFIG_MTK_CLKBUF_NFC=y
 CONFIG_MTK_CLKBUF=m
