Synchronize code for OnePlus CPH2491_13.1.0.543(EX01) CPH2493_13.1.0.543(EX01)

--- a/arch/arm64/boot/dts/mediatek/oplus_charge.dtsi
+++ b/arch/arm64/boot/dts/mediatek/oplus_charge.dtsi
@@ -314,6 +314,7 @@
 		reset-gpio = <&pio 21 0x00>;
 		irq-gpio = <&pio 14 0x00>;
 		qcom,device_id = <815>;
+		aw8697_vmax = /bits/ 8 < 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x01 0x04 0x07 0x0A 0x0D 0x10 0x10 0x10 0x10 >;
 
 		pinctrl-names = "default";
 		pinctrl-0 = <&aw_irq_gpio_default>;
