drivers: misc-mtk: lens: v4l2: Split oplus specific lens drivers into different configs
This avoid building unecessary lens drivers for some devices

--- a/drivers/misc/mediatek/lens/vcm/v4l2/Makefile
+++ b/drivers/misc/mediatek/lens/vcm/v4l2/Makefile
@@ -2,24 +2,17 @@
 # Makefile for misc devices that really don't fit anywhere else.
 #
 
-obj-$(CONFIG_MTK_V4L2_LENS)   += media/
-obj-$(CONFIG_MTK_V4L2_LENS)   += ak7314af/
-obj-$(CONFIG_MTK_V4L2_LENS)   += dw9718af/
-obj-$(CONFIG_MTK_V4L2_LENS)   += dw9718/
-obj-$(CONFIG_MTK_V4L2_LENS)   += lc898229/
-obj-$(CONFIG_MTK_V4L2_LENS)   += gt9764/
-obj-$(CONFIG_MTK_V4L2_LENS)   += gt9772a/
-obj-$(CONFIG_MTK_V4L2_LENS)   += gt9772b/
-obj-$(CONFIG_MTK_V4L2_LENS)   += ak7377a/
-obj-$(CONFIG_MTK_V4L2_LENS)   += dw9800w/
-obj-$(CONFIG_MTK_V4L2_LENS)   += ak7375c/
-obj-$(CONFIG_MTK_V4L2_LENS)   += ak7375c_22823/
-obj-$(CONFIG_MTK_V4L2_LENS)   += bu64253gwz/
-obj-$(CONFIG_MTK_V4L2_LENS)   += dw9800v/
-obj-$(CONFIG_MTK_V4L2_LENS)   += lc898217/
-obj-$(CONFIG_MTK_V4L2_LENS)   += ak7314_22021/
-obj-$(CONFIG_MTK_V4L2_LENS)   += dw9718p_22021/
-obj-$(CONFIG_MTK_V4L2_LENS)   += dw9718p_22017/
-obj-$(CONFIG_MTK_V4L2_LENS)   += gt9769_22921/
-obj-$(CONFIG_MTK_V4L2_LENS)   += ak7377_21871/
-obj-$(CONFIG_MTK_V4L2_LENS)   += jd5516w_21871/
+obj-$(CONFIG_MTK_V4L2_LENS)                           += media/
+obj-$(CONFIG_MTK_V4L2_LENS_OPLUS_COMMON_SUPPORT)      += ak7314af/
+obj-$(CONFIG_MTK_V4L2_LENS_OPLUS_COMMON_SUPPORT)      += ak7375c/
+obj-$(CONFIG_MTK_V4L2_LENS_OPLUS_COMMON_SUPPORT)      += ak7377a/
+obj-$(CONFIG_MTK_V4L2_LENS_ARIES_SUPPORT)             += gt9769_22921/
+obj-$(CONFIG_MTK_V4L2_LENS_DITING_SUPPORT)            += bu64253gwz/
+obj-$(CONFIG_MTK_V4L2_LENS_LINHAI_SUPPORT)            += dw9718p_22017/
+obj-$(CONFIG_MTK_V4L2_LENS_QINGTING_SUPPORT)          += ak7314_22021/
+obj-$(CONFIG_MTK_V4L2_LENS_QINGTING_SUPPORT)          += dw9718p_22021/
+obj-$(CONFIG_MTK_V4L2_LENS_QQCANDY_SUPPORT)           += lc898217/
+obj-$(CONFIG_MTK_V4L2_LENS_TAIBAI_SUPPORT)            += dw9718af/
+obj-$(CONFIG_MTK_V4L2_LENS_VITAMIN_SUPPORT)           += ak7375c_22823/
+obj-$(CONFIG_MTK_V4L2_LENS_VITAMIN_SUPPORT)           += ak7377_21871/
+obj-$(CONFIG_MTK_V4L2_LENS_VITAMIN_SUPPORT)           += jd5516w_21871/
