--- a/drivers/misc/mediatek/lens/Kconfig
+++ b/drivers/misc/mediatek/lens/Kconfig
@@ -14,6 +14,78 @@ config MTK_V4L2_LENS
 	  If you have any questions about this, say Y here,
 	  only say N if you know exactly what you are doing.
 
+if MTK_V4L2_LENS
+
+config MTK_V4L2_LENS_OPLUS_COMMON_SUPPORT
+	tristate "Mediatek V4L2 lens drivers for some oplus6895 and oplus6983 projects"
+	help
+	  This is lens driver for camera
+	  Say Y here if you want to enable lens driver.
+	  If you have any questions about this, say Y here,
+	  only say N if you know exactly what you are doing.
+
+config MTK_V4L2_LENS_ARIES_SUPPORT
+	tristate "Mediatek V4L2 lens driver for oplus6983 aries"
+	help
+	  This is lens driver for camera
+	  Say Y here if you want to enable lens driver.
+	  If you have any questions about this, say Y here,
+	  only say N if you know exactly what you are doing.
+
+config MTK_V4L2_LENS_DITING_SUPPORT
+	tristate "Mediatek V4L2 lens driver for oplus6983 diting"
+	select MTK_V4L2_LENS_OPLUS_COMMON_SUPPORT
+	help
+	  This is lens driver for camera
+	  Say Y here if you want to enable lens driver.
+	  If you have any questions about this, say Y here,
+	  only say N if you know exactly what you are doing.
+
+config MTK_V4L2_LENS_LINHAI_SUPPORT
+	tristate "Mediatek V4L2 lens driver for oplus6895 linhai"
+	select MTK_V4L2_LENS_OPLUS_COMMON_SUPPORT
+	help
+	  This is lens driver for camera
+	  Say Y here if you want to enable lens driver.
+	  If you have any questions about this, say Y here,
+	  only say N if you know exactly what you are doing.
+
+config MTK_V4L2_LENS_QINGTING_SUPPORT
+	tristate "Mediatek V4L2 lens driver for oplus6983 qingting"
+	help
+	  This is lens driver for camera
+	  Say Y here if you want to enable lens driver.
+	  If you have any questions about this, say Y here,
+	  only say N if you know exactly what you are doing.
+
+config MTK_V4L2_LENS_QQCANDY_SUPPORT
+	tristate "Mediatek V4L2 lens driver for oplus6895 qqcandy"
+	select MTK_V4L2_LENS_OPLUS_COMMON_SUPPORT
+	help
+	  This is lens driver for camera
+	  Say Y here if you want to enable lens driver.
+	  If you have any questions about this, say Y here,
+	  only say N if you know exactly what you are doing.
+
+config MTK_V4L2_LENS_TAIBAI_SUPPORT
+	tristate "Mediatek V4L2 lens driver for oplus6895 taibai"
+	select MTK_V4L2_LENS_OPLUS_COMMON_SUPPORT
+	help
+	  This is lens driver for camera
+	  Say Y here if you want to enable lens driver.
+	  If you have any questions about this, say Y here,
+	  only say N if you know exactly what you are doing.
+
+config MTK_V4L2_LENS_VITAMIN_SUPPORT
+	tristate "Mediatek V4L2 lens driver for oplus6983 vitamin"
+	help
+	  This is lens driver for camera
+	  Say Y here if you want to enable lens driver.
+	  If you have any questions about this, say Y here,
+	  only say N if you know exactly what you are doing.
+
+endif
+
 #
 # LENS
 #
