--- a/drivers/misc/mediatek/lens/vcm/v4l2/ak7314af/Makefile
+++ b/drivers/misc/mediatek/lens/vcm/v4l2/ak7314af/Makefile
@@ -2,4 +2,4 @@
 # Makefile for misc devices that really don't fit anywhere else.
 #
 
-obj-$(CONFIG_MTK_V4L2_LENS) += ak7314af.o
+obj-$(CONFIG_MTK_V4L2_LENS_OPLUS_COMMON_SUPPORT) += ak7314af.o
