--- a/drivers/misc/mediatek/lens/vcm/v4l2/ak7375c_22823/Makefile
+++ b/drivers/misc/mediatek/lens/vcm/v4l2/ak7375c_22823/Makefile
@@ -2,4 +2,4 @@
 # Makefile for misc devices that really don't fit anywhere else.
 #
 
-obj-$(CONFIG_MTK_V4L2_LENS) += ak7375c_22823.o
+obj-$(CONFIG_MTK_V4L2_LENS_VITAMIN_SUPPORT) += ak7375c_22823.o
