--- a/drivers/misc/mediatek/lens/vcm/v4l2/dw9718p_22021/Makefile
+++ b/drivers/misc/mediatek/lens/vcm/v4l2/dw9718p_22021/Makefile
@@ -2,4 +2,4 @@
 # Makefile for misc devices that really don't fit anywhere else.
 #
 
-obj-$(CONFIG_MTK_V4L2_LENS) += dw9718p_22021.o
+obj-$(CONFIG_MTK_V4L2_LENS_QINGTING_SUPPORT) += dw9718p_22021.o
