--- a/drivers/misc/mediatek/lens/vcm/v4l2/gt9769_22921/Makefile
+++ b/drivers/misc/mediatek/lens/vcm/v4l2/gt9769_22921/Makefile
@@ -2,4 +2,4 @@
 # Makefile for misc devices that really don't fit anywhere else.
 #
 
-obj-$(CONFIG_MTK_V4L2_LENS) += gt9769_22921.o
+obj-$(CONFIG_MTK_V4L2_LENS_ARIES_SUPPORT) += gt9769_22921.o
