--- a/drivers/misc/mediatek/lens/vcm/v4l2/jd5516w_21871/Makefile
+++ b/drivers/misc/mediatek/lens/vcm/v4l2/jd5516w_21871/Makefile
@@ -2,4 +2,4 @@
 # Makefile for misc devices that really don't fit anywhere else.
 #
 
-obj-$(CONFIG_MTK_V4L2_LENS) += jd5516w_21871.o
+obj-$(CONFIG_MTK_V4L2_LENS_VITAMIN_SUPPORT) += jd5516w_21871.o
