--- a/drivers/misc/mediatek/lens/vcm/v4l2/lc898217/Makefile
+++ b/drivers/misc/mediatek/lens/vcm/v4l2/lc898217/Makefile
@@ -2,4 +2,4 @@
 # Makefile for misc devices that really don't fit anywhere else.
 #
 
-obj-$(CONFIG_MTK_V4L2_LENS) += lc898217.o
+obj-$(CONFIG_MTK_V4L2_LENS_QQCANDY_SUPPORT) += lc898217.o
