--- a/arch/arm64/configs/vitamin-gki_defconfig
+++ b/arch/arm64/configs/vitamin-gki_defconfig
@@ -393,6 +393,7 @@ CONFIG_MTK_MDP_MT6983=m
 CONFIG_MMPROFILE=m
 CONFIG_MTK_LENS=m
 CONFIG_MTK_V4L2_LENS=m
+CONFIG_MTK_V4L2_LENS_VITAMIN_SUPPORT=m
 CONFIG_MTK_FLASHLIGHT=m
 CONFIG_MTK_V4L2_FLASHLIGHT=m
 CONFIG_MTK_FLASHLIGHT_PT=y
