--- a/drivers/gpu/mediatek/gpu_mali/mali_valhall/mali-r32p1/drivers/base/arm/protected_memory_allocator/Makefile
+++ b/drivers/gpu/mediatek/gpu_mali/mali_valhall/mali-r32p1/drivers/base/arm/protected_memory_allocator/Makefile
@@ -25,6 +25,6 @@ subdir-ccflags-y += $(ccflags-y)
 
 ifeq ($(CONFIG_MALI_PROTECTED_MEMORY_ALLOCATOR), y)
 #obj-m := protected_memory_allocator.o
-obj-m += mali_prot_alloc_$(MTK_PLATFORM_VERSION).o
-mali_prot_alloc_$(MTK_PLATFORM_VERSION)-y := protected_memory_allocator.o
+obj-m += mali_prot_alloc_$(MTK_PLATFORM).o
+mali_prot_alloc_$(MTK_PLATFORM)-y := protected_memory_allocator.o
 endif
