[DNM] arm64: dts: mediatek: Set permissive into chosen for mt6983
As per bengris, MGK 5.10 lk ignore androidboot.*args directly exposed to bootconfig (they rely on mtkboot.*args on lk dtb, which end up
being set into bootconfig later on). Instead, let's declare androidboot.*args into chosen from dtb, which set them into bootconfig later on

--- a/arch/arm64/boot/dts/mediatek/mt6983.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6983.dts
@@ -411,7 +411,8 @@
 			initcall_debug=1 transparent_hugepage=never \
 			allow_mismatched_32bit_el0 \
 			firmware_class.path=/vendor/firmware \
-			log_buf_len=2m";
+			log_buf_len=2m \
+			androidboot.selinux=permissive";
 /*#else
 		bootargs = "console=tty0 root=/dev/ram \
 			rcupdate.rcu_expedited=1 \
