arm64: dts: mediatek: Reverse the rest of oplus6983 dtbo
Now it's a 1:1 copy of stock dtbo image

--- a/arch/arm64/boot/dts/mediatek/Makefile
+++ b/arch/arm64/boot/dts/mediatek/Makefile
@@ -1,6 +1,12 @@
 # SPDX-License-Identifier: GPL-2.0
 dtb-$(CONFIG_ARCH_MEDIATEK)  += mt6983.dtb
-dtbo-$(CONFIG_ARCH_MEDIATEK) += oplus6983_22823.dtbo
+dtbo-$(CONFIG_ARCH_MEDIATEK) += \
+    k6983v1_64.dtbo \
+    oplus6983_21007.dtbo \
+    oplus6983_22021.dtbo \
+    oplus6983_22021_EVB.dtbo \
+    oplus6983_22823.dtbo \
+    oplus6983_22921.dtbo
 
 always-y        := $(dtb-y) $(dtbo-y)
 subdir-y        := $(dts-dirs)
