scripts: Implement MediaTek dtboimg.cfg generation Makefile

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -162,6 +162,7 @@ ifndef KBUILD_MIXED_TREE
 all:	Image.gz
 endif
 
+include $(srctree)/scripts/dtboimg/dtboimgcfg.mk
 
 Image: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
